--- a/public/projects.json
+++ b/public/projects.json
@@ -5,11 +5,13 @@
           "titleOne" : "Velo Cycle Ride is a  cycle selling  Niche  e-commercial website",
           "titleTwo": "Admin and users dashboard are available",
           "titleThree":"Front-end and back-end with MongoDB CRUD operation",
-          "img1": "https://i.ibb.co/rcyKFYn/header.png",
-          "img2": "https://i.ibb.co/KrpNZwv/newslater.png",
-          "img3": "https://i.ibb.co/ccHzQVD/products.png",
-          "img4": "https://i.ibb.co/tJFQJQp/basics.png",
-          "img6": "https://i.ibb.co/VmrnT0b/footer.png",
+          "titleFour":"At first if you want buy a cycle,  you need to create an account in our platform and then you can able to order a product",
+          "titleFive":" Interested ? our web link  there just click and visit our site and communicate well open an account and feel free to use",
+          "img1": "https://i.ibb.co/9pxGC8C/header.png",
+          "img2": "https://i.ibb.co/gMg9tmY/product.png",
+          "img3": "https://i.ibb.co/JkX65VJ/letter.png",
+          "img4": "https://i.ibb.co/71FW7Bs/carosul.png",
+          "img5": "https://i.ibb.co/XZh1GpS/footer.png",
           "technologies" : "React,  JavaScript, Material-ui,Node.js, Express.js, mongoDB, Firebase-Authentication, Login, Register, Google-SignIn,,Heroku and Firebase deployment",
           "LiveSite":"https://cycle-ride-auth.web.app/",
           "ClientSide":"https://github.com/okshihafiz/niche-website-client-side",
@@ -17,35 +19,40 @@
      },
      {
           "id":2,
-          "name" : "TRAVEL AGENCY",
-          "titleOne" : "Travel Agency  is a tourism website",
-          "titleTwo": "All  data stored from database and visitor can booked a place",
-          "titleThree":"Visite place, guiders and booking informations are available here",
-          "img1": "https://i.ibb.co/vzbSLJS/Header.png",
-          "img2": "https://i.ibb.co/T41vdNG/services.png",
-          "img3": "https://i.ibb.co/rcYnnpX/tour.png",
-          "img4": "https://i.ibb.co/ryxY4X1/talk.png",
-          "img6": "https://i.ibb.co/S3rFZPN/footer.png",
-          "technologies" : "React,  JavaScript, Bootstrap,  Node.js, Express.js, mongoDB, Firebase-Authentication, Google-SignIn, Heroku and Firebase deployment",
-          "LiveSite":"https://travel-agency-authentication.web.app/",
-          "ClientSide":"https://github.com/okshihafiz/tourisim-website-client-site",
-          "ServerSide":"https://github.com/okshihafiz/tourisim-website-server-site"
-     },
-     {
-          "id":3,
           "name" : "MEDI LIFE",
           "titleOne" : "Authenticated user can  take a doctors services",
           "titleTwo": "Created services with fake JSON API and route page also set up",
           "titleThree":"Real time project created for patient purpose to discuss with the      doctors and take their services",
-          "img1": "https://i.ibb.co/kxyB07L/header.png",
-          "img2": "https://i.ibb.co/6X7JJYW/doctor-Contact.png",
-          "img3": "https://i.ibb.co/DzcfrqN/services.png",
-          "img4": "https://i.ibb.co/Yfx5vZL/news.png",
-          "img6": "https://i.ibb.co/5Tcm7xv/footer.png",
+          "titleFour":"World first doctors is here you just need to visit this site and explain your causes what you need I am sure it will be batter for you .",
+          "titleFive":"Doctor always ready for give treatment for your illness. If you need pre-direction just visit the site link is here",
+          "img1": "https://i.ibb.co/bWGbhZ9/header.png",
+          "img2": "https://i.ibb.co/QXPmHkK/contact.png",
+          "img3": "https://i.ibb.co/MByWWms/product.png",
+          "img4": "https://i.ibb.co/yh26XD4/cart.png",
+          "img5": "https://i.ibb.co/XVDKhQT/footer.png",
           "technologies" : "React, Bootstrap, CSS, Firebase-Authentication,Login, Register Google-SignIn, Github-SignIn,Firebase deployment",
           "LiveSite":"https://medi-life-authentication.web.app/",
           "ClientSide":"https://github.com/okshihafiz/health-care",
           "ServerSide":"Not Applicable"
+     },
+     {
+          "id":3,
+          "name" : "TRAVEL AGENCY",
+          "titleOne" : "Travel Agency  is a tourism website",
+          "titleTwo": "All  data stored from database and visitor can booked a place",
+          "titleThree":"Visite place, guiders and booking informations are available here",
+          "titleFour":"when your are interested first you need to login this site with google login and then you will be communicate",
+          "titleFive":"If you are follow these simple step it will be helpful to easily connect with us and to share your information",
+          "img1": "https://i.ibb.co/JqBnswJ/header.png",
+          "img2": "https://i.ibb.co/dr9M04C/products.png",
+          "img3": "https://i.ibb.co/LvHnN15/guiders.png",
+          "img4": "https://i.ibb.co/F6RBkRJ/footer.png",
+          "img5": "https://i.ibb.co/KKR7ntX/Talk.png",
+
+          "technologies" : "React,  JavaScript, Bootstrap,  Node.js, Express.js, mongoDB, Firebase-Authentication, Google-SignIn, Heroku and Firebase deployment",
+          "LiveSite":"https://travel-agency-authentication.web.app/",
+          "ClientSide":"https://github.com/okshihafiz/tourisim-website-client-site",
+          "ServerSide":"https://github.com/okshihafiz/tourisim-website-server-site"
      }
 ]
 
